--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "next-ts-clipboard-website",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Mehmethan Guven",
+    "email": "mehmethanguven@gmail.com"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
